--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Wedge applicarion</title>
 </head>
 
-<body>
+<body bgcolor="#0F978F">
     <div class="h-screen flex flex-col">
         <div class="flex justify-between align-center items-center container-lg mx-auto pt-10">
             <img src="./assets/images/wege-mobile.svg" class="w-auto" />
