--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body bgcolor="#0F978F">
     <div class="h-screen flex flex-col">
         <div class="flex justify-between align-center items-center container-lg mx-auto pt-10">
-            <img src="./assets/images/wege-mobile.svg" class="w-auto animate-bounce" />
+            <img src="./assets/images/wege-mobile.svg" class="w-auto" />
             <div class="flex flex-col pr-10">
                 <h1 class="text-6xl font-bold text-white pb-6">
                     Join the
